# Poneglyph-Reduce

./: .env.example  .gitignore  DISTRIBUTED_DEPLOYMENT.md  DOCKERFILE_OPTIMIZATION.md  INTEGRATION_COMPLETE.bat  INTEGRATION_SUMMARY.md  README.md  VERIFY_COMPLETE.bat  complete_demo.py  demo_completo.bat  demo_interaccion.py  deploy-dashboard.sh  deploy-emqx.sh  deploy-master.sh  deploy-redis.sh  deploy-worker.sh  distributed-deployment.env  docker-compose.basic.yml  docker-compose.complete.yml  docker-compose.grpc.yml  docker-compose.yml  integrated_system_test.py  live_demo.py  manage.ps1  middleware_integration_plan.py  real_integration_test.py  requirements.txt  resumen_funcionamiento.py  run.sh  simple_integration_test.py  sistema_status.py  test_complete_system.py  test_enhanced_integration.py  test_grpc_direct.py  test_smart_scheduler.sh  verify_system.py
Clover/: Dockerfile  map.py  reduce.py  submit_job.py
Clover/examples/automatas-celulares/: data.txt  map.py  reduce.py
Clover/examples/ciencia-datos/: map.py  reduce.py
Clover/examples/monte-carlo/: data.txt  map.py  reduce.py
Clover/examples/regresion-lineal/: data.txt  map.py  reduce.py
Poneglyph/: CMakeLists.txt  Dockerfile  Dockerfile.enhanced  Dockerfile.grpc  Dockerfile.source  main.cpp  poneglyph_worker.cpp  worker_demo.cpp
Poneglyph/core/: worker.cpp
Poneglyph/model/: http.hpp  json.hpp  worker.hpp
Poneglyph/proto/: gridmr.proto
Poneglyph/rpc/: grpc_client.hpp
Poneglyph/telemetry/: mqtt.cpp  mqtt.hpp
PoneglyphMiddleware/: Dockerfile.grpc  grpc_middleware.py  poneglyph.proto  poneglyph_pb2.py  poneglyph_pb2_grpc.py  requirements.txt  test_grpc_client.py
Road-Poneglyph/: .env.s3  .gitignore  Dockerfile  Dockerfile.complete  S3_USAGE.md  build.gradle  run.sh  s3-config-example.env  settings.gradle
Road-Poneglyph/src/: Demo.java  GrpcIntegratedMain.java  GrpcIntegratedSystem.java  HybridMain.java  IntegratedMain.java  IntegrationCompleteDemo.java  Main.java  PoneglyphGrpcDemo.java  SimpleGrpcIntegratedMain.java
Road-Poneglyph/src/api/: JobsApi.java  TasksApi.java  WorkersApi.java
Road-Poneglyph/src/core/: Partitioner.java  Scheduler.java  SmartScheduler.java
Road-Poneglyph/src/grpc/: comandos.txt  gRPCUtils.java
Road-Poneglyph/src/http/: HttpUtils.java
Road-Poneglyph/src/main/proto/: gridmr.proto  helloworld.proto
Road-Poneglyph/src/model/: JobCtx.java  JobSpec.java  JobState.java  Task.java  TaskType.java  Worker.java
Road-Poneglyph/src/rpc/: MasterService.java
Road-Poneglyph/src/store/: RedisStore.java
Road-Poneglyph/src/telemetry/: MqttClientManager.java
Road-Poneglyph/src/utils/: S3Utils.java
ansible/: README.md  hosts.ini  setup_ec2.yml  test_setup.sh
dashboard/: DASHBOARD_README.md  Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: ConnectionStatus.tsx  JobCard.tsx  LogViewer.tsx  MapReduceFlow.tsx  SmartSchedulerView.tsx
dashboard/src/components/ui/: tabs.tsx
dashboard/src/hooks/: useMqtt.ts  useScheduler.ts
dashboard/src/types/: mqtt.ts
docs/: ARQUITECTURA_FINAL.md  FAULT_TOLERANCE_SUMMARY.md
documentation/: compile_references.sh  main.tex
documentation/Chapters/: 1. Introduccion.tex  2. References.tex  3. Arquitectura.tex  4. Protocolos.tex  5. Implementacion.tex  6. Entorno.tex  7. Resultados.tex  8. Conclusiones.tex
documentation/General/: References.bib  Settings.tex
middleware/: config.py  dynamodb_state_store.py  fault_tolerance.py  fault_tolerance_api.py  fault_tolerant_grpc.py  grpc_middleware.py  load_balancer.py  metrics_collector.py  metrics_server.py  mqtt_bridge.py  server.py  state_store.py
tests/: production_fault_tolerance_demo.py  test_fault_tolerance_simplified.py
